--- a/css/layout.css
+++ b/css/layout.css
@@ -305,6 +305,7 @@
 #footer {
     background-color: var(--mainPink);
     font-size: 0.85rem;
+    min-width: 100%;
 }
 
 .footer-logo-container img {
